# Terabithia

./: .clang-format  CMakeLists.txt  README.md
assets/meshes/: dodecahedron.def  hexahedron.def  icosahedron.def
assets/shapes/: hexahedron.def
cmake/: libraries.cmake
core/: UUID.cpp  cubemap.cpp  filesystem.cpp  image.cpp  tools.cpp
core/include/: UUID.h  asserts.h  core_types.h  cubemap.h  filesystem.h  image.h  macros.h  tools.h
editor/: editor.cpp  editor_helpers.cpp  selection_manager.cpp
editor/include/: editor.h  editor_helpers.h  selection_manager.h
editor/windows/: browser_window.cpp  camera_window.cpp  component_window.cpp  console_window.cpp  hierarchy_window.cpp  main_menu.cpp  settings_window.cpp  viewport_window.cpp
editor/windows/include/: browser_window.h  camera_window.h  component_window.h  console_window.h  editor_windows.h  hierarchy_window.h  settings_window.h  viewport_window.h
examples/: CMakeLists.txt
examples/compute/: compute.cpp
examples/example_1/: example_1.cpp
examples/example_2/: example_2.cpp
examples/example_3/: example_3.cpp
examples/example_4/: example_4.cpp
examples/mesh_viewer/: mesh_viewer.cpp
examples/program_introspection/: program_introspection.cpp
examples/shapes/: shapes.cpp
examples/texture/: texture.cpp
examples/triangle/: triangle.cpp
graphics/: commands.cpp  debug.cpp  graphics_types.cpp
graphics/buffer/: buffer.cpp  buffer.h  vertex_buffer.h
graphics/graphics_pipeline/: graphics_pipeline.cpp  graphics_pipeline.h  shader_information.cpp  shader_information.h  shader_uniform.h
graphics/include/: commands.h  debug.h  graphics.h  graphics_types.def  graphics_types.h
graphics/texture/: framebuffer.cpp  framebuffer.h  renderbuffer.cpp  renderbuffer.h  sampler.cpp  sampler.h  texture.cpp  texture.h
graphics/vertex/: vertex.h  vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_format.cpp  vertex_format.h
gui/: window.cpp  window_callback.cpp
gui/imgui/: imgui_helpers.cpp  imgui_helpers.h  imgui_platform.cpp  imgui_platform.h  imgui_renderer.cpp  imgui_renderer.h  imgui_window.cpp  imgui_window.h  imgui_windows_manager.cpp  imgui_windows_manager.h
gui/include/: gui.h  icons.h  window.h  window_event_handler.h
mesh/: mesh.cpp  mesh_factory.cpp
mesh/include/: mesh.h  mesh_factory.h
mesh/material/: material.h
mesh/model_loader/: model_loader.h  model_loader_khronos.cpp  model_loader_wavefront.cpp
renderer/: mesh_allocator.cpp  renderer.cpp  shader_library.cpp
renderer/include/: mesh_allocator.h  renderer.h  shader_library.h
scene/: scene.cpp  scene_manager.cpp
scene/camera/: camera.cpp  camera.h  editor_camera.cpp  editor_camera.h
scene/components/: components.h  light.h  model.cpp  model.h  transform.cpp  transform.h  transform_component.h
scene/include/: entity.h  scene.h  scene_manager.h
scene/light/: area_light.h  directional_light.h  light.h  point_light.h
shaders/: bindless_phong.frag  gui.vert  imgui.frag  imgui.vert  indirect_mesh.vert  mesh.vert  phong.frag  ray.frag  ray.vert
shaders/gallery/: terrain.comp
shaders/gui/: gui.frag  gui.vert
shaders/mesh/: monochrome_mech.vert
shaders/sources/common/: colored_mesh.frag  mesh.frag  mesh.vert  plain_mesh.frag  textured_mesh.frag
shaders/sources/gui/: gui.vert
shaders/sources/pulling/: colored_mesh.vert  plain_mesh.vert  textured_mesh.vert
shaders/test/: 2d.frag  2d.vert  circle.comp  shape.vert  square.frag  square.vert
terabithia/: CMakeLists.txt  application.cpp  context.cpp  terabithia.cpp
terabithia/application/: application.cpp  application.h  layer.h
terabithia/application/include/: application.h  layer.h  terabithia.h
terabithia/common/: config.h.in  terabithia.h
terabithia/core/: core.cpp  descriptor.cpp  image.cpp  timer.cpp  tools.cpp
terabithia/core/include/: concepts.h  core.h  descriptor.h  image.h  macros.h  mask.h  timer.h  tools.h
terabithia/graphics/: buffer.cpp  framebuffer.cpp  graphics_types.cpp  graphics_wrappers.cpp  program.cpp  texture.cpp  vertex_array.cpp
terabithia/graphics/buffer/: buffer.h  buffer.ipp
terabithia/graphics/include/: buffer.h  buffer.ipp  framebuffer.h  graphics_types.def  graphics_types.h  graphics_wrappers.h  graphics_wrappers.ipp  program.h  program.ipp  texture.h  texture.ipp  vertex_array.h  vertex_array.ipp
terabithia/graphics/texture/: framebuffer.h  renderbuffer.h  texture.h  texture.ipp
terabithia/gui/: window.cpp
terabithia/gui/imgui/: imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h
terabithia/gui/include/: event.h  key.h  window.h
terabithia/gui/window/: event.h  key.cpp  key.h  key_event.h  mouse_event.h  window.cpp  window.h  window_event.h
terabithia/include/: application.h  context.h  statistics.h
terabithia/mathematics/: noise.cpp
terabithia/mathematics/include/: mathematical_types.h  mathematics_types.h  noise.h
terabithia/mesh/: assimp_loader.cpp  shape.cpp  wavefront_loader.cpp
terabithia/mesh/include/: mesh.h  mesh_loader.h  model.h  shape.h
terabithia/mesh/model/: mesh.h  model.h  wavefront_loader.cpp
terabithia/mesh/shapes/: shapes.cpp  shapes.h
terabithia/scene/: camera.cpp
terabithia/scene/camera/: camera.cpp  camera.h
terabithia/scene/include/: camera.h
